--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 Grab a random literary quote from http://www.litquotes.com/Random-Quote.php
+
+Install with:
+
+    $> go get github.com/lbolla/litquotes
+
+Run with:
+
+    $> litquotes
